--- a/babel.config.json
+++ b/babel.config.json
@@ -14,6 +14,8 @@
   ],
   "plugins": [
     "@babel/transform-runtime",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-optional-chaining",
     ["optimize-clsx", { "functionNames": ["getCellClassname"] }]
   ]
 }
