--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-data-grid",
-  "version": "7.0.0-beta.12",
+  "name": "@openabnr/react-data-grid",
+  "version": "7.0.0-abnr.12",
   "license": "MIT",
   "description": "Feature-rich and customizable data grid React component",
   "keywords": [
     "react",
     "data grid"
   ],
-  "repository": "github:adazzle/react-data-grid",
+  "repository": "github:openabnr/react-data-grid",
   "bugs": "https://github.com/adazzle/react-data-grid/issues",
   "type": "module",
   "exports": {
@@ -37,8 +37,7 @@
     "prettier:check": "prettier --check .",
     "prettier:format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.all.json",
-    "prepublishOnly": "npm install && npm run build && npm run build:types",
-    "postpublish": "git push --follow-tags origin HEAD"
+    "prepublishOnly": "npm install && npm run build && npm run build:types"
   },
   "dependencies": {
     "clsx": "^1.1.1"
