--- a/babel.config.json
+++ b/babel.config.json
@@ -14,6 +14,7 @@
   ],
   "plugins": [
     "@babel/transform-runtime",
+    "@babel/plugin-transform-logical-assignment-operators",
     "@babel/plugin-transform-nullish-coalescing-operator",
     "@babel/plugin-transform-optional-chaining",
     ["optimize-clsx", { "functionNames": ["getCellClassname"] }]
